--- a/TypescriptGuide/src/treeview.less
+++ b/TypescriptGuide/src/treeview.less
@@ -11,11 +11,13 @@
     img {
       margin-right: 5px;
       cursor: pointer;
+      margin-top: -8px;
     }
 
     i.fa {
       margin-right: 5px;
       cursor: pointer;
+      width: 8px;
     }
   }
 }
